<resources>
    <string name="app_name">F.I.R.E</string>
    <string name="facebook_app_id">1552415968257801</string>
    <string name="fb_login_protocol_scheme">fb1552415968257801</string>
    <string name="sign_up">Sign Up</string>
    <string name="fire">F.I.R.E</string>
    <string name="podcast">Podcast</string>
    <string name="youtube">Youtube</string>
    <string name="books">Books</string>
    <string name="pros">Pros</string>
    <string name="blogs">Blogs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="rating">Rating</string>
    <string name="link">Link</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="enter_link">Enter link</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="enter_name">Enter name</string>
    <string name="banner_ad_unit_id">ca-app-pub-6031188943467510/4105484868</string>
    <string name="username">Username</string>
    <string name="textview">TextView</string>
    <string name="rate_this">Rate This</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="please_enter_your_email_address_to_reset">Please Enter Your Email Address To Reset</string>
    <string name="email">Email:</string>
    <string name="reset">Reset</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo">TODO</string>




</resources>
