<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSilver">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/layoutBarBottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarBottom"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:layout_scrollFlags="scroll|enterAlways">


            </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPurple"
                android:textAlignment="center"
                app:tabGravity="fill"
                app:tabIndicatorColor="#FFFFFF"
                app:tabMaxWidth="0dp"
                app:tabMode="fixed"
                app:tabTextAppearance="@style/CustomTabText"
                app:tabTextColor="@color/colorWhite">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabPodcasts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/sharp_mic_white_24"
                    android:text="@string/podcast"
                    android:textAlignment="center" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabYoutube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/sharp_tv_white_24"
                    android:text="@string/youtube" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabBooks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/sharp_menu_book_white_24"
                    android:text="@string/books" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabPros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/sharp_person_white_24"
                    android:text="@string/pros" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabBlogs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/sharp_edit_white_24"
                    android:text="@string/blogs" />
            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/text_Mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_black_italic"
            android:text="Add Podcast"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/divider5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_black_italic"
            android:text="@string/link"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider7" />

        <EditText
            android:id="@+id/editLink"
            android:layout_width="308dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorPurple"
            android:ems="10"
            android:fontFamily="@font/alegreya_black_italic"
            android:hint="@string/enter_link"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:textColor="@color/colorBlack"
            android:textColorHint="#5E000000"
            app:layout_constraintBottom_toTopOf="@+id/divider8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLink" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="318dp"
            android:layout_height="51dp"
            android:backgroundTint="@color/colorPurple"
            android:ems="10"
            android:fontFamily="@font/alegreya_black_italic"
            android:hint="@string/enter_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorBlack"
            android:textColorHint="#5E000000"
            app:layout_constraintBottom_toTopOf="@+id/divider6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textName" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="315dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorPurple"
            android:ems="10"
            android:fontFamily="@font/alegreya_black_italic"
            android:gravity="start|top"
            android:hint="@string/enter_a_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@color/colorBlack"
            android:textColorHint="#5E000000"
            app:layout_constraintBottom_toTopOf="@+id/divider7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescription" />

        <View
            android:id="@+id/divider7"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="@color/colorPurple"
            app:layout_constraintBottom_toTopOf="@+id/textLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDescription" />

        <TextView
            android:id="@+id/textRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_black_italic"
            android:text="@string/rating"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ratingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider8" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="244dp"
            android:layout_height="58dp"
            android:isIndicator="false"
            android:progressBackgroundTint="@color/colorBlack"
            android:progressTint="@color/colorWhite"
            android:stepSize="1"
            app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRating" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_black_italic"
            android:text="@string/description"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider6" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_black_italic"
            android:text="@string/name"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider5" />

        <View
            android:id="@+id/divider5"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="@color/colorPurple"
            app:layout_constraintBottom_toTopOf="@+id/textName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Mode" />

        <View
            android:id="@+id/divider6"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="@color/colorPurple"
            app:layout_constraintBottom_toTopOf="@+id/textDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editName" />

        <View
            android:id="@+id/divider8"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="@color/colorPurple"
            app:layout_constraintBottom_toTopOf="@+id/textRating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLink" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/alegreya_black_italic"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPurple"
        android:clickable="true"
        android:tint="@color/colorWhite"
        app:backgroundTint="@color/colorPurple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".99"
        app:srcCompat="@drawable/sharp_home_white_18dp" />

</androidx.constraintlayout.widget.ConstraintLayout>