<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDetail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@drawable/layout_rounded"
    android:elevation="15dp"
    app:layout_constraintCircleRadius="15dp">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/alegreya_black_italic"
        android:text="@string/textview"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/textViewLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:clickable="true"
        android:fontFamily="@font/alegreya_black_italic"
        android:gravity="center|center_horizontal"
        android:text="@string/textview"
        android:textColor="#05DFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingBarAverageInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        app:layout_constraintVertical_chainStyle="spread" />

    <RatingBar
        android:id="@+id/ratingBarAverageInfo"
        style="@style/Widget.AppCompat.RatingBar"
        android:layout_width="244dp"
        android:layout_height="51dp"
        android:layout_margin="15dp"
        android:isIndicator="true"
        android:progressBackgroundTint="@color/colorBlack"
        android:progressTint="@color/colorWhite"
        android:stepSize="1"
        app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLink"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="353dp"
        android:layout_height="131dp"
        android:layout_margin="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/alegreya_black_italic"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewRateThis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarAverageInfo"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/textViewRateThis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/alegreya_black_italic"
        android:text="@string/rate_this"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingBarSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription"
        app:layout_constraintVertical_chainStyle="spread" />

    <RatingBar
        android:id="@+id/ratingBarSubmit"
        android:layout_width="244dp"
        android:layout_height="45dp"
        android:layout_margin="15dp"
        android:progressBackgroundTint="@color/colorBlack"
        android:progressTint="@color/colorWhite"
        android:stepSize="1"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubmitRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRateThis"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/buttonSubmitRating"
        android:layout_width="110dp"
        android:layout_height="56dp"
        android:layout_margin="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button_black"
        android:fontFamily="@font/alegreya_black_italic"
        android:padding="5dp"
        android:text="@string/submit_rating"
        android:textColor="@color/colorPurple"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarSubmit"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/fabClose"
        android:layout_width="62dp"
        android:layout_height="46dp"
        android:background="@color/colorPurple"
        android:foreground="@drawable/sharp_arrow_back_white_18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSubmitRating"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarSubmit"
        app:layout_constraintVertical_bias=".7" />

</androidx.constraintlayout.widget.ConstraintLayout>